--- a/css-grid.html
+++ b/css-grid.html
@@ -36,10 +36,30 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: repeat(4 ,1fr);
+        grid-template-rows: repeat(2, 1fr);
+        /* height: 500px; */
+
+        /* gap:30px; */
+        column-gap: 20px;
+        row-gap: 40px;
+
+        display: none;
+      }
+
+      .el--8 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 2;
+      }
+
+      .el--2 {
+        grid-column: 4 / 5;
+        grid-row: 2 / 3;
       }
 
       .container--2 {
@@ -47,12 +67,22 @@
         font-family: sans-serif;
         background-color: black;
         font-size: 40px;
-        margin: 100px;
+        margin: 40px;
 
-        width: 1000px;
+        width: 700px;
         height: 600px;
 
+        
         /* CSS GRID */
+
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+
+        justify-content: center;
+
+        align-content: center;
       }
     </style>
   </head>
@@ -64,7 +94,7 @@
       <div class="el el--4">(4) are</div>
       <div class="el el--5">(5) amazing</div>
       <div class="el el--6">(6) languages</div>
-      <div class="el el--7">(7) to</div>
+      <!-- <div class="el el--7">(7) to</div> -->
       <div class="el el--8">(8) learn</div>
     </div>
 
