--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
       <!-- <div class="clear"></div> -->
     </header>
 
-    <div class="row">
+    <!-- ONLY NECESSARY FOR FLEXBOX -->
+    <!-- <div class="row"> -->
     <article>
       <header class=" post-header">
         <h2>The Basic Language of the Web: HTML</h2>
@@ -144,7 +145,8 @@
         </li>     
       </ul>
     </aside>
-  </div>
+    <!-- </div> -->
+
     <footer>
       <p id = "copyright">
           Copyright &copy; 2027 by The Code Magazine.
